- Added FNV-1 hash support to ext/hash. (Michael Maclean)
- Added ReflectionExtension::isTemporary() and
  ReflectionExtension::isPersistent(). (Johannes)
- Added ReflectionZendExtension class. (Johannes)
- Added command line option --rz to CLI. (Johannes)
- Added closure $this support back. (Stas)
- Added SplObjectStorage::getHash() hook. (Etienne)
- Added JsonSerializable interface (Sara)
- Added support for storing upload progress feedback in session data. (Arnaud)
- Added support for CURLOPT_MAX_RECV_SPEED_LARGE and CURLOPT_MAX_SEND_SPEED_LARGE.
  FR #51815. (Pierrick)
- Added iterator support in MySQLi. mysqli_result implements Traversable.
  (Andrey, Johannes)
- Added scalar typehinting. (Ilia, Derick)
- Added support for JSON_NUMERIC_CHECK option in json_encode() that converts 
  numeric strings to integers. (Ilia)

- default_charset if not specified is now UTF-8 instead of ISO-8859-1. (Rasmus)

- Changed the structure of op_array.opcodes. The constant values are moved from
  opcode operands into a separate literal table. (Dmitry)
- Changed session.entropy_file to default to /dev/urandom or /dev/arandom if
  either is present at compile time. (Rasmus)

- Improved CLI Interactive readline shell (Johannes)
  . Added cli.pager ini setting to set a pager for output.
  . Added cli.prompt ini settingto configure the shell prompt.
  . Added shortcut #inisetting=value to change ini settings at run-time.
  . Don't terminate shell on fatal errors.

- Removed legacy features:
  . allow_call_time_pass_reference. (Pierrick)
  . define_syslog_variables ini option and its associated function. (Kalle)
  . highlight.bg ini option. (Kalle)
  . import_request_variables(). (Kalle)
  . register_globals. (Kalle)
  . register_long_arrays ini option. (Kalle)
  . Safe mode. (Kalle)
  . Session bug compatibility mode (session.bug_compat42 and 
    session.bug_compat_warn ini options). (Kalle)
  . session_is_registered(), session_register() and session_unregister() 